<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="13">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextViewListOfScoreHeader"
        android:layout_weight="3"
        android:text="@string/ten_mon_hoc" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextViewListOfScoreHeader"
        android:layout_weight="2"
        android:text="@string/diem_tp_1" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextViewListOfScoreHeader"
        android:layout_weight="2"
        android:text="@string/diem_tp_2" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextViewListOfScoreHeader"
        android:layout_weight="2"
        android:text="@string/diem_thi" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextViewListOfScoreHeader"
        android:layout_weight="2"
        android:text="@string/diem_tong_ket" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BaseTextViewListOfScoreHeader"
        android:layout_weight="2"
        android:text="@string/diem_chu" />
</LinearLayout>