<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_normal_margin">

        <TextView
            android:id="@+id/tv_current_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/lab_black"
            android:textSize="@dimen/base_helper_text" />

        <SeekBar
            android:id="@+id/sb_audio_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_small_margin"
            android:layout_marginEnd="@dimen/base_small_margin"
            android:layout_toStartOf="@id/tv_duration"
            android:layout_toEndOf="@id/tv_current_duration"
            android:progressTint="@color/lab_red"
            android:thumbTint="@color/lab_red" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/lab_black"
            android:textSize="@dimen/base_helper_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_jump_minus"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/btn_jump_minus"
            android:src="@drawable/replay_5_line_red" />

        <ImageView
            android:id="@+id/btn_play_pause"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/base_xhigh_margin"
            android:layout_marginEnd="@dimen/base_xhigh_margin"
            android:contentDescription="@string/btn_play_pause"
            android:src="@drawable/play_circle_outline_red" />

        <ImageView
            android:id="@+id/btn_jump_plus"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/btn_jump_plus"
            android:src="@drawable/forward_5_line" />
    </LinearLayout>
</LinearLayout>